tree-sitter-asciidoc_inline/test/corpus/emphasis.txt
====================
emphasis
====================

this is a *emphasis* or in this form**em\*phasis**.
this is a _ltalic_ or in this form__l\_talic__is ok.
this is a `italic` or in this form``lta\`lic``is ok.
this is a #italic# or in this form##lta\#lic##is ok.

this is a _`monospace` inside ltalic_ code.

-----

(inline
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (emphasis))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (emphasis))
  (inline_element)
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (italic))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (italic))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element)
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (monospace))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (monospace))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element)
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (highlight))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (highlight))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element)
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (italic
      (monospace)))
  (inline_element
    (word))
  (inline_element))
