tree-sitter-asciidoc_inline/test/corpus/passthrough.txt
====================
empty
====================

pass:[]

-------

(inline
  (inline_element
    (macro_passthrough
      (macro_name))))

====================
passthrough
====================

+text+
`text`

$$text$$
$$text$$
pass:quotes[text]

-----

(inline
  (inline_element
    (passthrough))
  (inline_element
    (monospace))
  (inline_element
    (passthrough))
  (inline_element
    (passthrough))
  (inline_element
    (macro_passthrough
      (macro_name)
      (target)
      (attr))))

====================
triple plus
====================

+++<b>raw</b>+++ and ++unconstrained++

-----

(inline
  (inline_element
    (passthrough))
  (inline_element
    (word))
  (inline_element
    (passthrough)))
