tree-sitter-asciidoc_inline/test/corpus/xref.txt
====================
xref
====================

<<id,reftext>>
xref:id[reftext]

<<aaa\,\>,bbb\>>>

<<aaa\,\>>>

-----

(inline
  (inline_element
    (xref
      (id)
      (reftext)))
  (inline_element
    (inline_macro
      (macro_name)
      (target)
      (attr
        (positional_attr))))
  (inline_element
    (xref
      (id)
      (reftext)))
  (inline_element
    (xref
      (id))))
